{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 96,
  "lineage": "eb537a28-e2c3-4238-5c29-37822bfffc23",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "healthcare_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring-staging/monitoring-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/auth-secret": "",
                  "nginx.ingress.kubernetes.io/auth-type": "",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "healthcare-app",
                  "component": "monitoring",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "monitoring-ingress",
                "namespace": "monitoring-staging",
                "resource_version": "236838",
                "uid": "b83799d3-c08a-4aca-80d2-11ed74a37236"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "monitoring-staging.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 3000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/grafana",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prometheus",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9090
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/prometheus",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.monitoring",
            "kubernetes_service.grafana",
            "kubernetes_service.prometheus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring-staging",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "monitoring",
                  "environment": "staging",
                  "managed-by": "terraform",
                  "purpose": "observability"
                },
                "name": "monitoring-staging",
                "resource_version": "236781",
                "uid": "8d0b3079-d2fb-4306-9886-90c91d07170c"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/grafana",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "grafana",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "grafana",
                "namespace": "monitoring-staging",
                "resource_version": "236796",
                "uid": "2a2e6b75-d030-4675-98ff-0394c8109498"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.66.99",
                "cluster_ips": [
                  "10.43.66.99"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30150,
                    "port": 3000,
                    "protocol": "TCP",
                    "target_port": "grafana"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "grafana",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring-staging/prometheus",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "healthcare-app",
                  "component": "prometheus",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "prometheus",
                "namespace": "monitoring-staging",
                "resource_version": "236798",
                "uid": "25367ef8-23f6-4cbf-afee-f3ba6461a4f0"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.110.230",
                "cluster_ips": [
                  "10.43.110.230"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 9090,
                    "protocol": "TCP",
                    "target_port": "prometheus"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "healthcare-app",
                  "component": "prometheus",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    }
  ]
}